--- a/app/views/links/_form.html.erb
+++ b/app/views/links/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@link) do |f| %>
+<%= form_for(@link, html: {role: "form"}) do |f| %>
   <% if @link.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@link.errors.count, "error") %> prohibited this link from being saved:</h2>
@@ -10,28 +10,15 @@
       </ul>
     </div>
   <% end %>
-
-  <div class="field">
-    <%= f.label :given_url %><br>
-    <%= f.text_field :given_url %>
+<div class="row">
+  <div class="col-sm-10 col-md-offset-1">
+    <%= f.text_field :given_url, id: "input-lg", class: "form-control input-lg", placeholder: "Enter Url" %>
   </div>
-  <div class="field">
-    <%= f.label :slug %><br>
-    <%= f.text_field :slug %>
-  </div>
-  <div class="field">
-    <%= f.label :clicks %><br>
-    <%= f.number_field :clicks %>
-  </div>
-  <div class="field">
-    <%= f.label :snapshot %><br>
-    <%= f.text_field :snapshot %>
-  </div>
-  <div class="field">
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
-  </div>
+</div>
+<br>
+<div class="row">
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit 'Shorten', class: 'btn btn-default' %>
   </div>
+</div>
 <% end %>
