Add feature to shorten url an redirect to original url

--- a/app/views/links/_form.html.erb
+++ b/app/views/links/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_for(@link, html: {role: "form"}) do |f| %>
   <% if @link.errors.any? %>
-    <div id="error_explanation">
+    <div class="alert alert-danger">
       <h2><%= pluralize(@link.errors.count, "error") %> prohibited this link from being saved:</h2>
 
       <ul>
