--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,7 +52,39 @@
   </style>
 </head>
 <body>
+<!-- Navbar -->
+<nav class="navbar navbar-default">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>                        
+      </button>
+      <a class="navbar-brand" href="<%= root_path %>">Enlace</a>
+    </div>
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav navbar-right">
+        <li><%= link_to 'Home', root_path %></li>
+        <li><a href="#">Sign In</a></li>
+        <li><a href="#">Sign Up</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<!-- First Container -->
+<div class="container-fluid bg-1 text-center">
+  <h3 class="margin">Tired of Long Links?</h3>
+  <img src=" <%= asset_path('bird.jpg') %> " class="img-responsive img-circle margin" style="display:inline" alt="Bird" width="350" height="350">
+  <h3>Get the shortest and easy to remember links.</h3>
+</div>
+
 <%= yield %>
 
+<!-- Footer -->
+<footer class="container-fluid bg-4 text-center">
+  <p>Enlace hecho por mi <a href="github.com/andela-bmakinwa/enlace">aqui</a>.</p> 
+</footer>
 </body>
 </html>
