--- a/app/views/links/edit.html.erb
+++ b/app/views/links/edit.html.erb
@@ -1,6 +1,16 @@
-<h1>Editing Link</h1>
 
-<%= render 'form' %>
+  <h3 class="margin">Editing Link</h3>
+  <% unless flash.notice == nil || flash.error == nil %>
+    <div class="alert alert-success">
+      <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+      <strong>Success!</strong> <%= flash.notice %>
+    </div>
+    <div class="alert alert-warning">
+      <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+      <strong>Warning!</strong> <%= flash.error %>
+    </div>
+  <% end %>
+    <%= render 'form_edit' %>
 
-<%= link_to 'Show', @link %> |
-<%= link_to 'Back', links_path %>
+
+
