--- a/app/views/links/new.html.erb
+++ b/app/views/links/new.html.erb
@@ -21,9 +21,12 @@
           <div class="panel panel-default">
             <div class="panel-heading"><%= ENV["BASE_URL"] + link.slug %></div>
             <div class="panel-body">
-              <p><%= h truncate(link.given_url, :length => 30) %></p>
+              <p><%= h truncate(link.given_url, length: 30) %></p>
               <h4>Clicks: <%= link.clicks %></h4>
-              <%= link_to "Edit", edit_link_path(link.id) %>
+              <% unless @current_user.id.blank? %>
+                <%= link_to "Edit", edit_link_path(link.id) %>
+                <%= link_to "Delete", link_path(link), method: :delete, data: {confirm: "Really delete the Article?"} %>
+              <% end %>
             </div>
           </div>
         </div>
