--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,12 +26,12 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
         
-        <% if @current_user.id == nil %>
-          <li><%= link_to "Sign In", users_path %></li>
+        <% if @current_user.nil? %>
+          <li><%= link_to "Sign In", login_path %></li>
           <li><%= link_to "Sign Up", new_user_path %></li>
         <% else %>
           <li><%= link_to @current_user.name, "#" %></li>
-          <li><%= link_to 'Logout', root_path %></li>
+          <li><%= link_to 'Logout', logout_path, method: :delete %></li>
         <% end %>
       </ul>
     </div>
