--- a/app/views/links/_form_edit.html.erb
+++ b/app/views/links/_form_edit.html.erb
@@ -11,15 +11,15 @@
     </div>
   <% end %>
 
-<div class="container">
+<div class="row">
   <div class="form-group">
     <label for="given_url">Link Url</label>
-    <%= f.text_field :given_url, class: "form-control input-lg", id:"inputlg", placeholder: "Enter Url" %>
+    <%= f.text_field :given_url, class: "form-control input-lg", id:"inputlg"%>
   </div>
   <div class="form-group">
     <label for="slug">Vanity String</label>
     <% unless @current_user.id == nil %>
-      <%= f.text_field :slug, class: "form-control input-lg", id:"inputlg", placeholder: "Enter Vanity String" %>
+      <%= f.text_field :slug, class: "form-control input-lg", id:"inputlg"%>
     <% end %>
   </div>
 
@@ -35,7 +35,7 @@
   </div>
 
   <div class="actions">
-    <%= f.submit class: 'btn btn-default' %>
+    <%= f.submit "Update", class: 'btn btn-default' %>
   </div>
 </div>
 
