--- a/app/views/links/edit.html.erb
+++ b/app/views/links/edit.html.erb
@@ -1,12 +1,12 @@
-
-  <h3 class="margin">Editing Link</h3>
-  <% unless flash.notice == nil%>
-    <div class="alert alert-success">
+<div class="container-fluid bg-2 text-center">
+  <h3 class="margin">Edit Link</h3>
+  <% unless flash[:danger].blank? %>
+    <div class="alert alert-danger">
       <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-      <strong>Success!</strong> <%= flash.notice %>
+      <strong><%= flash[:danger] %></strong>
     </div>
   <% end %>
+  <div class="col-md-6 col-md-offset-3">
     <%= render 'form_edit' %>
-
-
-
+  </div>
+</div>
