--- a/app/views/links/new.html.erb
+++ b/app/views/links/new.html.erb
@@ -7,7 +7,9 @@
       <strong>Success!</strong> <%= flash.notice %>
     </div>
   <% end %>
-  <%= render 'form' %>
+  <div class="col-md-6 col-md-offset-3">
+    <%= render 'form' %>
+  </div>
 </div>
 
 
@@ -23,7 +25,7 @@
             <div class="panel-body">
               <p><%= h truncate(link.given_url, length: 30) %></p>
               <h4>Clicks: <%= link.clicks %></h4>
-              <% unless @current_user.id.blank? %>
+              <% unless @current_user.nil? %>
                 <%= link_to "Edit", edit_link_path(link.id) %>
                 <%= link_to "Delete", link_path(link), method: :delete, data: {confirm: "Really delete the Article?"} %>
               <% end %>
