--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -14,15 +14,15 @@
   <div class="form-group">
 
     <label for="email">Name:</label>
-    <%= f.text_field :name, class: "form-control", id: "name", placeholder: "Enter name" %>
+    <%= f.text_field :name, class: "form-control", id: "name"%>
   </div>
   <div class="form-group">
     <label for="name">Email:</label>
-    <%= f.text_field :email, class: "form-control", id: "email", placeholder: "Enter email" %>
+    <%= f.text_field :email, class: "form-control", id: "email"%>
   </div>
   <div class="form-group">
     <label for="pwd">Password:</label>
-    <%= f.password_field :password, class: "form-control", id: "password", placeholder: "Enter password" %>
+    <%= f.password_field :password, class: "form-control", id: "password"%>
   </div>
 
   <%= f.submit 'Create', class: 'btn btn-default' %>
