--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,10 +1,12 @@
 <div class="container-fluid bg-2 text-center">
   <h3 class="margin">Create Account</h3>
-  <% unless flash.notice == nil %>
-    <div class="alert alert-success">
+  <% unless flash[:danger].blank? %>
+    <div class="alert alert-danger">
       <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-      <strong>Success!</strong> <%= flash.notice %>
+      <strong><%= flash[:danger] %></strong>
     </div>
   <% end %>
+  <div class="col-md-6 col-md-offset-3">
     <%= render 'form' %>
+  </div>
 </div>
